--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,9 @@
 }
 
 #navigation {
-  display: inline;
+  padding: 10px;
+  font-size: small;
+  color: #00000;
 }
 
 #search {
@@ -24,12 +26,32 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#left {
+  float: left;
+}
+
+li a {
+  display: block;
+  text-align center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+#right {
+  float: right;
+}
+ 
 ul {
   list-style-type: none;
   margin: 0;
+  overflow: hidden;
   padding: 0;
 }
 
-li {
-  display: inline;
+ul li.left {
+  float: left;
+}
+
+ul li.right {
+  float: right;
 }
