--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,3 @@
-#content {
-  margin-bottom: 50%;
-  margin-top: 50%;
-}
-
-#logo {
-  display: block;
-  height: 92px;
-  width: 272px;
-}
-
-#navigation {
-  padding: 10px;
-  font-size: small;
-  color: #00000;
-}
-
 #search {
   display: block;
   font: 16px arial, sans-serif;
@@ -26,21 +9,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#left {
-  float: left;
-}
-
 li a {
   display: block;
-  text-align center;
+  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
-#right {
-  float: right;
-}
- 
 ul {
   list-style-type: none;
   margin: 0;
@@ -54,4 +29,25 @@ ul li.left {
 
 ul li.right {
   float: right;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+.footer {
+  border: 1px solid #000000;
+}
+
+.logo {
+  padding-top: 180px;
+}
+
+.navigation {
+  padding: 10px;
+  font-size: small;
+  color: #00000;
 }
